gcc/testsuite/rust/rustc/ui/error-codes/E0403.rs
fn foo<T, T>(s: T, u: T) {} // { dg-error ".E0403." "" { target *-*-* } }

fn main() {
}

